# kvxopt

./: .gitignore  INSTALL  Jenkinsfile  README.md  pyproject.toml  setup.cfg  setup.py
.ci/config/: build.env  linux.env  macos.env  versions.env  windows.env
.ci/library_builders/: build_openblas.sh  build_osqp.sh  compile_glpk.bat  compile_gsl.bat  download_fftw.sh  download_glpk.bat  download_openblas.sh  download_suitesparse.sh  prepare_fftw.bat
.ci/scripts/: build_linux.sh  build_macos.sh  build_windows.bat  build_windows.sh  install_dependencies.bat  install_dependencies.sh
.github/workflows/: build.yml  build_osqp_linux.sh  build_publish_linux.yml  build_publish_macos.yml  build_publish_source.yml  build_publish_windows.yml  build_wheels.yml  linux_build.yml  macos_build.yml  windows_build.yml  windows_build_mingw.yml  windows_build_mvsc.yml
doc/html/: blas.html  c-api.html  coneprog.html  copyright.html  fftw.html  index.html  intro.html  lapack.html  matrices.html  modeling.html  printing.html  search.html  solvers.html  spsolvers.html
doc/html/_static/: documentation_options.js
doc/source/: coneprog.rst  conf.py  copyright.rst  index.rst  solvers.rst  spsolvers.rst
examples/doc/chap9/: floorplan.py
src/C/: amd.c  base.c  blas.c  cholmod.c  cvxopt.h  dense.c  dsdp.c  fftw.c  glpk.c  gsl.c  gurobi.c  klu.c  kvxopt.h  lapack.c  misc.h  misc_solvers.c  osqp.c  sparse.c  umfpack.c
src/python/: __init__.py  _version.py  coneprog.py  cvxprog.py  info.py  misc.py  modeling.py  msk.py  printing.py  solvers.py
tests/: test_basic.py  test_blas.py  test_dsdp.py  test_gurobi.py  test_osqp.py  test_sparse_solvers.py
