[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/python/_version.py"

[kvxopt]
kvxopt = ["version"]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
environment = {KVXOPT_BUILD_DSDP="1", KVXOPT_BUILD_FFTW="1", KVXOPT_BUILD_GLPK="1", KVXOPT_BUILD_GSL="1", KVXOPT_BLAS_LIB="openblas", KVXOPT_LAPACK_LIB="openblas", KVXOPT_DSDP_LIB_DIR="/usr/local/lib"}
before-all = "./.ci-support/before_all_linux.sh"

[tool.cibuildwheel.macos]
environment = {KVXOPT_BUILD_DSDP="1", KVXOPT_BUILD_FFTW="1", KVXOPT_BUILD_GLPK="1", KVXOPT_BUILD_GSL="1", KVXOPT_DSDP_LIB_DIR="/usr/local/lib"}
before-all = "./.ci-support/before_all_macos.sh"

[tool.cibuildwheel.windows]
environment = {KVXOPT_BUILD_DSDP="0", KVXOPT_BUILD_FFTW="0", KVXOPT_BUILD_GLPK="1", KVXOPT_BUILD_GSL="1", KVXOPT_MSVC="1"}
before-all = ".ci-support\before_all_windows.bat"
