[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=6.2", "numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kvxopt"
dynamic = ["version"]
description = "Convex optimization package and Suite Sparse interface"
license = "GPL-3.0-or-later"
authors = [
    { name = "M. Andersen", email = "martin.skovgaard.andersen@gmail.com"},
    { name = "J. Dahl" , email = "dahl.joachim@gmail.com"},
    { name = "L. Vandenberghe", email = "vandenbe@ee.ucla.edu" },
    { name = "U. Sandoval", email = "sanurielf@gmail.com" }
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Operating System :: OS Independent",
        "Programming Language :: C",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering"
        ]
urls = { "Source" = "https://github.com/sanurielf/kvxopt" }


readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.19.0"]

[tool.setuptools_scm]
write_to = "src/python/_version.py"
local_scheme = "no-local-version"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = ["cp*-win32", "cp*-manylinux_i686", "pp*"]
test-requires = ["numpy", "pytest"]
test-command = [
    "python -c \"from kvxopt import blas,lapack,glpk,osqp,fftw,gsl,cholmod,umfpack,klu; print('kvxopt import successful')\"",
    "pytest {project}/tests"
]

[tool.cibuildwheel.environment]
KVXOPT_BUILD_GSL = "1"
KVXOPT_BUILD_FFTW = "1"
KVXOPT_BUILD_GLPK = "1"
KVXOPT_BUILD_OSQP = "1"
KVXOPT_BUILD_DSDP = "0"
KVXOPT_BLAS_LIB = "openblas"
KVXOPT_LAPACK_LIB = "openblas"

# [tool.cibuildwheel.windows.environment]
# KVXOPT_BUILD_GSL = "0"
# KVXOPT_BUILD_FFTW = "0"
# KVXOPT_BUILD_GLPK = "0"
# KVXOPT_BUILD_OSQP = "0"
# KVXOPT_BUILD_DSDP = "0"


# [tool.cibuildwheel.macos.environment]
# KVXOPT_BUILD_GSL = "1"
# KVXOPT_BUILD_FFTW = "1"
# KVXOPT_BUILD_GLPK = "1"
# KVXOPT_BUILD_OSQP = "1"
# KVXOPT_BUILD_DSDP = "0"
# KVXOPT_BLAS_LIB = "openblas"
# KVXOPT_LAPACK_LIB = "openblas"
# KVXOPT_SUITESPARSE_LIB_DIR = "$(brew --prefix suite-sparse)/lib"


[tool.cibuildwheel.linux.environment]
KVXOPT_BUILD_GSL = "1"
KVXOPT_BUILD_FFTW = "1"
KVXOPT_BUILD_GLPK = "1"
KVXOPT_BUILD_OSQP = "1"
KVXOPT_BUILD_DSDP = "0"
KVXOPT_BLAS_LIB = "openblas"
KVXOPT_LAPACK_LIB = "openblas"
KVXOPT_BLAS_LIB_DIR = "/usr/lib64/:/usr/lib/x86_64-linux-gnu/"
KVXOPT_GLPK_LIB_DIR = "/usr/lib64/:/usr/lib/x86_64-linux-gnu/"
KVXOPT_GSL_LIB_DIR = "/usr/lib64/:/usr/lib/x86_64-linux-gnu/"
KVXOPT_FFTW_LIB_DIR = "/usr/lib64/:/usr/lib/x86_64-linux-gnu/"
KVXOPT_OSQP_LIB_DIR = "/usr/local/lib/:/usr/local/lib64/"
KVXOPT_OSQP_INC_DIR = "/usr/local/include/osqp/"
KVXOPT_SUITESPARSE_LIB_DIR = "/usr/lib64/:/usr/lib/x86_64-linux-gnu/"
KVXOPT_SUITESPARSE_INC_DIR = "/usr/include/suitesparse/"

